# vibe-orchestra

./: .gitignore  ORCHESTRA.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
agents/: goal-thinker.toml  goal-verifier.toml
tests/: test_capabilities.py  test_goal_skill.py  test_install.py  test_models.py  test_router.py
vibe_orchestra/: __init__.py  capabilities.py  catalog.py  cli.py  install.py  mcp_server.py  models.py  router.py
vibe_orchestra/skills/goal/: SKILL.md
