[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-orchestra"
version = "0.2.0"
description = "A Mistral model-and-specialist router for vibe: describe a task, it routes to the right model, specialist, and tool."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Guillaume Vele" }]
keywords = ["mistral", "vibe", "router", "orchestration", "agents", "ministral", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/guillaumevele/vibe-orchestra"
Repository = "https://github.com/guillaumevele/vibe-orchestra"

[project.scripts]
vibe-orchestra = "vibe_orchestra.cli:main"
vibe-orchestra-mcp = "vibe_orchestra.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest>=7"]
mcp = ["mcp>=1.2"]

[tool.hatch.build.targets.wheel]
packages = ["vibe_orchestra"]
